home page design complete

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="menu.css">
     <link rel="stylesheet" href="responsive.css">
 </head>
-<body>
+<body id="body">
     <header>
-        <div class="menu">
-            
+        <div id="menu" class="menu"> 
+            <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
     </header>
     <div class="container">
-        <div class="img-section">
+        <div id="img" class="img-section">
         </div>
         <div class="info-section">
            <div class="inner-info-section">
@@ -38,5 +39,6 @@
                 </div>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
