about me page added

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="menu-section">
                 <div class="inner-menu-section">
                     <ul>
-                        <li><a href=""><i class="fa fa-home" aria-hidden="true"></i></a></li>
-                        <li><a href=""><i class="fa fa-user" aria-hidden="true"></i></a></li>
+                        <li id='active'><a href=""><i class="fa fa-home" aria-hidden="true"></i></a></li>
+                        <li><a href="pages/about-me.html"><i class="fa fa-user" aria-hidden="true"></i></a></li>
                         <li><a href=""><i class="fa fa-briefcase" aria-hidden="true"></i></a></li>
                         <li><a href=""><i class="fa fa-envelope-open" aria-hidden="true"></i></a></li>
                         <li><a href=""><i class="fa fa-comments" aria-hidden="true"></i></a></li>
