about me page added

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="about-me.css">
     <link rel="stylesheet" href="../../responsive.css">
 </head>
-<body id="body">
+<body id="body-me">
     <header>
-        <div id="menu" class="menu"> 
+        <div id="menu-me" class="menu"> 
             <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
     </header>
@@ -80,6 +80,6 @@
                 </div>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="about-me.js"></script>
 </body>
 </html>
